Actualizar index.html para GitHub Pags

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div class="corazon">❤️</div>
     <h1>Feliz San Valentín</h1>
     <p id="mensaje">
-        Tengo algo importante que preguntarte...
+        Tengo algo importante que preguntarte, aunque sea de esta manera pero siempre pensando en ti, te amo y espero tu respuesta...
     </p>
-    <button onclick="mostrarMensaje()">💌 Presiona aquí</button>
+    <button onclick="mostrarMensaje()">💌 Presiona aquí 💌</button>
 </div>
 
 <script>
