--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: hidden;
         }
 
         .carta {
@@ -20,6 +21,7 @@
             width: 350px;
             text-align: center;
             box-shadow: 0 15px 30px rgba(0,0,0,0.3);
+            position: relative;
         }
 
         h1 {
@@ -32,7 +34,7 @@
         }
 
         button {
-            margin-top: 20px;
+            margin: 10px;
             padding: 10px 20px;
             font-size: 16px;
             border: none;
@@ -40,13 +42,14 @@
             background: #e63946;
             color: white;
             cursor: pointer;
+            position: relative;
+            transition: all 0.3s;
         }
 
         button:hover {
             background: #d62828;
         }
 
-        /* CORAZÓN LATIENDO */
         .corazon {
             font-size: 40px;
             display: inline-block;
@@ -58,6 +61,19 @@
             50% { transform: scale(1.3); }
             100% { transform: scale(1); }
         }
+
+        .corazon-enorme {
+            font-size: 150px;
+            display: block;
+            margin: 20px auto;
+            animation: latido 1s infinite;
+        }
+
+        #botones-si-no {
+            margin-top: 20px;
+            position: relative;
+            height: 50px;
+        }
     </style>
 </head>
 <body>
@@ -66,15 +82,58 @@
     <div class="corazon">❤️</div>
     <h1>Feliz San Valentín</h1>
     <p id="mensaje">
-        Tengo algo importante que preguntarte, aunque sea de esta manera pero siempre pensando en ti, te amo y espero tu respuesta...
+        Tengo algo importante que preguntarte...
     </p>
-    <button onclick="mostrarMensaje()">💌 Presiona aquí 💌</button>
+    <!-- Botón original -->
+    <button onclick="mostrarMensaje()">💌 Presiona aquí</button>
+    
+    <!-- Botones Sí/No se agregan dinámicamente -->
+    <div id="botones-si-no"></div>
 </div>
 
 <script>
 function mostrarMensaje() {
     document.getElementById("mensaje").innerHTML =
-    "¿Quieres ser mi San Valentín? 💕🥰";
+        "¿Quieres ser mi San Valentín? 💕🥰";
+
+    // Crear botones Sí y No
+    let contenedor = document.getElementById("botones-si-no");
+    contenedor.innerHTML = `
+        <button id="btn-si" onclick="presionarSi()">Sí 💕</button>
+        <button id="btn-no">No 😢</button>
+    `;
+
+    // Botón No se mueve dentro de la carta
+    let btnNo = document.getElementById("btn-no");
+    btnNo.addEventListener("mousemove", moverBoton);
+    btnNo.addEventListener("click", moverBoton);
+}
+
+function presionarSi() {
+    document.getElementById("mensaje").innerHTML = "¡Me alegra que digas Sí! ❤️";
+    let corazon = document.createElement("div");
+    corazon.className = "corazon-enorme";
+    corazon.innerText = "❤️";
+    document.querySelector(".carta").appendChild(corazon);
+
+    // Ocultar los botones Sí/No
+    document.getElementById("botones-si-no").style.display = "none";
+}
+
+function moverBoton(event) {
+    let btnNo = event.target;
+    let carta = document.querySelector(".carta");
+
+    // Limites dentro de la carta
+    let maxX = carta.clientWidth - btnNo.offsetWidth - 20;
+    let maxY = carta.clientHeight - btnNo.offsetHeight - 20;
+
+    let randX = Math.floor(Math.random() * maxX);
+    let randY = Math.floor(Math.random() * maxY);
+
+    btnNo.style.position = "absolute";
+    btnNo.style.left = randX + "px";
+    btnNo.style.top = randY + "px";
 }
 </script>
 
