--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         Tengo algo importante que preguntarte...
     </p>
     <!-- Botón original -->
-    <button onclick="mostrarMensaje()">💌 Presiona aquí</button>
-    
+<button id="btn-original" onclick="mostrarMensaje()">💌 Presiona aquí</button>
+
     <!-- Botones Sí/No se agregan dinámicamente -->
     <div id="botones-si-no"></div>
 </div>
