Botón original desaparece al presionarlooo

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="corazon">❤️</div>
     <h1>Feliz San Valentín</h1>
     <p id="mensaje">
-        Tengo algo importante que preguntarte...
+        Tengo algo importante que preguntarte, no podia permitir pasar esta fecha sin hacerlo especial y esopero te guste mi idea de hacerte esta pregunta...
     </p>
     <!-- Botón original -->
     <button id="btn-original" onclick="mostrarMensaje()">💌 Presiona aquí</button>
@@ -110,7 +110,7 @@ function mostrarMensaje() {
 }
 
 function presionarSi() {
-    document.getElementById("mensaje").innerHTML = "¡Me alegra que digas Sí! ❤️";
+    document.getElementById("mensaje").innerHTML = "¡Te amo mi princesa te prometo que sera especial espero te guste la sorpresita te amo chulaaaa! ❤️";
     let corazon = document.createElement("div");
     corazon.className = "corazon-enorme";
     corazon.innerText = "❤️";
