--- a/index.html
+++ b/index.html
@@ -82,17 +82,20 @@
     <div class="corazon">❤️</div>
     <h1>Feliz San Valentín</h1>
     <p id="mensaje">
-        Tengo algo importante que preguntarte, no podia permitir pasar esta fecha sin hacerlo especial y esopero te guste mi idea de hacerte esta pregunta...
+        Tengo algo importante que preguntarte...
     </p>
-    <!-- Botón original -->
+    <!-- Botón original con id -->
     <button id="btn-original" onclick="mostrarMensaje()">💌 Presiona aquí</button>
-
+    
     <!-- Botones Sí/No se agregan dinámicamente -->
     <div id="botones-si-no"></div>
 </div>
 
 <script>
 function mostrarMensaje() {
+    // Ocultar el botón original
+    document.getElementById("btn-original").style.display = "none";
+
     document.getElementById("mensaje").innerHTML =
         "¿Quieres ser mi San Valentín? 💕🥰";
 
@@ -110,7 +113,7 @@ function mostrarMensaje() {
 }
 
 function presionarSi() {
-    document.getElementById("mensaje").innerHTML = "¡Te amo mi princesa te prometo que sera especial espero te guste la sorpresita te amo chulaaaa! ❤️";
+    document.getElementById("mensaje").innerHTML = "¡Me alegra que digas Sí! ❤️";
     let corazon = document.createElement("div");
     corazon.className = "corazon-enorme";
     corazon.innerText = "❤️";
